Fixed script of section-03.

--- a/practitioner/burrow-dashboard-service.yaml
+++ b/practitioner/burrow-dashboard-service.yaml
@@ -3,9 +3,10 @@ apiVersion: v1
 metadata:
   name: burrow-dashboard
   labels:
-    k8s-app: burrow-dashboard
+    app: burrow-dashboard
 spec:
   selector:
-    k8s-app: burrow-dashboard
+    app: burrow-dashboard
   ports:
     - port: 80
+  type: LoadBalancer
