--- a/practitioner/my-kafka.yaml
+++ b/practitioner/my-kafka.yaml
@@ -235,7 +235,8 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: "gp2"
+  #storageClass: "gp2"
+  storageClass: "ibmc-file-bronze"
 
 jmx:
   ## Rules to apply to the Prometheus JMX Exporter.  Note while lots of stats have been cleaned and exposed,
