--- a/practitioner/burrow-dashboard.yaml
+++ b/practitioner/burrow-dashboard.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: burrow-dashboard
@@ -8,11 +8,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      k8s-app: burrow-dashboard
+      app: burrow-dashboard
   template:
     metadata:
       labels:
-        k8s-app: burrow-dashboard
+        app: burrow-dashboard
     spec:
       containers:
       - name: burrow-dashboard
