--- a/practitioner/burrow.yaml
+++ b/practitioner/burrow.yaml
@@ -31,3 +31,10 @@ spec:
           httpGet:
             path: /burrow/admin
             port: 8000
+        resources:
+          requests:
+            memory: 512Mi
+            cpu: "500m"
+          limits:
+            memory: 512Mi
+            cpu: "500m"
