--- a/practitioner/demo/kafka-topic-configmap.yaml
+++ b/practitioner/demo/kafka-topic-configmap.yaml
@@ -3,6 +3,9 @@ kind: ConfigMap
 metadata:
   name: kafka-topic-config
 data:
+  company-name: ibm
+  default-partitioner: org.apache.kafka.clients.producer.internals.DefaultPartitioner
+  custom-partitioner: com.ibm.lab.partition.CustomPartitioner
   kafka-topic-user00: testuser00
   kafka-topic-user01: testuser01
   kafka-topic-user02: testuser02
